--- a/package.json
+++ b/package.json
@@ -5,12 +5,15 @@
   "type": "module",
   "scripts": {
     "dev": "vite --host=0.0.0.0",
+    "dev:server": "json-server server.json -p 3333 -w",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
     "@phosphor-icons/react": "^2.0.15",
+    "@radix-ui/react-alert-dialog": "^1.0.5",
+    "@radix-ui/react-radio-group": "^1.1.3",
     "@types/styled-components": "^5.1.34",
     "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
@@ -27,6 +30,7 @@
     "eslint": "^8.55.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "json-server": "^1.0.0-alpha.21",
     "typescript": "^5.2.2",
     "vite": "^5.0.8"
   }
