--- a/package.json
+++ b/package.json
@@ -8,17 +8,24 @@
     "dev:server": "json-server server.json -p 3333 -w",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "lint:fix": "npx eslint src --ext tsx,ts --fix",
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.4",
     "@phosphor-icons/react": "^2.0.15",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-radio-group": "^1.1.3",
     "@types/styled-components": "^5.1.34",
+    "axios": "^1.6.5",
     "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "styled-components": "^6.1.8"
+    "react-hook-form": "^7.49.3",
+    "scheduler": "^0.23.0",
+    "styled-components": "^6.1.8",
+    "use-context-selector": "^1.4.1",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@rocketseat/eslint-config": "^2.1.0",
